Работает переход к новой activity и клик по элементу RecyclerWiew

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,32 +12,31 @@
         android:layout_height="wrap_content"
         android:text="@string/LabelMyNotesValue"
         android:textSize="30sp"
-        android:textColor="@color/medium_blue"
+        android:textColor="@color/main_blue_hard"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         />
     <ImageButton
         android:id="@+id/buttonRefresh"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/baseline_refresh_30"
+        android:background="@drawable/baseline_sync_30"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/buttonNewRootNote"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         tools:ignore="MissingConstraints"
         />
     <ImageButton
         android:id="@+id/buttonNewRootNote"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:background="@drawable/baseline_library_add_30"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         tools:ignore="MissingConstraints"
         />
