--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light_blue">#B7DFFF</color>
-    <color name="medium_blue">#0073FF</color>
+    <color name="main_blue_hard">#0073FF</color>
+    <color name="main_blue">#3E92F8</color>
+    <color name="main_blue_medium">#70ACF6</color>
+    <color name="main_blue_light">#B7DFFF</color>
 </resources>
