--- a/app/src/main/res/layout/activity_edit_root_note.xml
+++ b/app/src/main/res/layout/activity_edit_root_note.xml
@@ -5,14 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditRootNoteActivity"
-    android:padding="20dp"
     >
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/main_blue"
+        app:titleTextColor="@color/white"
+        app:title="Новая заметка"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:layout_margin="20dp"
+        >
 
         <EditText
             android:id="@+id/etName"
@@ -54,6 +67,7 @@
         android:textSize="22sp"
         android:textAlignment="gravity"
         android:gravity="start"
+        android:layout_margin="20dp"
         />
 
 
