--- a/app/src/main/res/layout/activity_edit_root_note.xml
+++ b/app/src/main/res/layout/activity_edit_root_note.xml
@@ -5,50 +5,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.editRootNoteActivity.EditNoteActivity"
+    android:background="@color/main"
     >
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/main_blue"
-        app:titleTextColor="@color/white"
-        app:title="Новая заметка"
+        android:background="@color/green_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="Новая заметка"
+        app:titleTextColor="@color/white" />
 
     <LinearLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         android:layout_margin="20dp"
-        >
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:ignore="MissingConstraints">
 
         <EditText
             android:id="@+id/etName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:inputType="text"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/main_blue_light"
+            android:background="@drawable/layout_bg_rounded"
             android:hint="@string/note_name_hint"
-            android:textSize="28sp"
-            />
+            android:inputType="text"
+            android:textSize="@dimen/noteName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/buttonSave"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginStart="10dp"
             android:layout_weight="0"
             android:background="@drawable/baseline_check_30"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="10dp"
             tools:ignore="MissingConstraints" />
     </LinearLayout>
 
@@ -56,19 +56,18 @@
         android:id="@+id/twDescription"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_margin="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/main_blue_light"
-        android:hint="@string/note_description_hint"
-        android:textSize="22sp"
-        android:textAlignment="gravity"
+        android:background="@drawable/layout_bg_rounded"
         android:gravity="start"
-        android:layout_margin="20dp"
-        />
+        android:hint="@string/note_description_hint"
+        android:textAlignment="gravity"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
