--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,64 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/main"
     tools:context=".presentation.mainActivity.MainActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:title="Shared Notes"
-        app:titleTextColor="@color/white"
-        android:background="@color/main_blue"
+        android:background="@color/green_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="Shared Notes"
+        app:titleTextColor="@color/white" />
 
     <TextView
         android:id="@+id/labelMyNotes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/LabelMyNotesValue"
-        android:textSize="30sp"
-        android:textColor="@color/main_blue_hard"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        />
+        android:text="@string/LabelMyNotesValue"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_main" />
+
     <ImageButton
         android:id="@+id/buttonRefresh"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/baseline_sync_30"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
-        app:layout_constraintEnd_toStartOf="@id/buttonNewRootNote"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        tools:ignore="MissingConstraints"
-        />
+        android:background="@drawable/baseline_cloud_upload_30"
+        app:layout_constraintEnd_toStartOf="@id/buttonNewRootNote"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
+        tools:ignore="MissingConstraints" />
+
     <ImageButton
         android:id="@+id/buttonNewRootNote"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/baseline_library_add_30"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        tools:ignore="MissingConstraints"
-        />
+        android:background="@drawable/baseline_library_add_30"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
+        tools:ignore="MissingConstraints" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rootNoteRecyclerViewList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/labelMyNotes"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/labelMyNotes" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
