--- a/app/src/main/res/layout/root_note_item.xml
+++ b/app/src/main/res/layout/root_note_item.xml
@@ -1,48 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/im_root_note_item"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="80dp"
+    android:background="@drawable/layout_bg_rounded"
     android:orientation="horizontal"
-    android:background="@color/main_blue_light"
-    android:layout_marginBottom="7dp"
+
     >
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
         android:layout_marginStart="5dp"
-        >
+        android:layout_weight="1"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textAlignment="textStart"
             android:textColor="@color/black"
-            android:textSize="28sp"
-            tools:text="Название заметки"
-            android:maxLines="1"
-            android:ellipsize="end"/>
+            android:textSize="@dimen/noteName"
+            tools:text="Название заметки" />
+
         <TextView
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textAlignment="textStart"
             android:textColor="@color/black"
             android:textSize="18sp"
-            tools:text="Описание заметки"
-            android:maxLines="1"
-            android:ellipsize="end"/>
+            tools:text="Описание заметки" />
     </LinearLayout>
 
     <ImageView
         android:id="@+id/iconShared"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:contentDescription="@string/imageUnsharedDescription" />
 </LinearLayout>
