--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar_main" />
 
     <ImageButton
-        android:id="@+id/buttonRefresh"
+        android:id="@+id/buttonSync"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
